@@ -11,6 +11,7 @@ import org.gridsuite.modification.ModificationType;
 import org.gridsuite.modification.NetworkModificationException;
 import org.gridsuite.modification.dto.*;
 import org.gridsuite.modification.server.dto.ModificationMetadata;
+import org.gridsuite.modification.server.elasticsearch.ModificationApplicationInfosService;
 import org.gridsuite.modification.server.entities.*;
 import org.gridsuite.modification.server.entities.equipment.creation.GeneratorCreationEntity;
 import org.gridsuite.modification.server.entities.equipment.modification.GeneratorModificationEntity;
@@ -19,6 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -39,20 +41,25 @@ public class NetworkModificationRepository {
 
     private final GeneratorCreationRepository generatorCreationRepository;
 
+    private final ModificationApplicationInfosService modificationApplicationInfosService;
+
     private static final String MODIFICATION_NOT_FOUND_MESSAGE = "Modification (%s) not found";
 
     public NetworkModificationRepository(ModificationGroupRepository modificationGroupRepository,
                                          ModificationRepository modificationRepository,
                                          GeneratorModificationRepository generatorModificationRepository,
-                                         GeneratorCreationRepository generatorCreationRepository) {
+                                         GeneratorCreationRepository generatorCreationRepository,
+                                         ModificationApplicationInfosService modificationApplicationInfosService) {
         this.modificationGroupRepository = modificationGroupRepository;
         this.modificationRepository = modificationRepository;
         this.generatorModificationRepository = generatorModificationRepository;
         this.generatorCreationRepository = generatorCreationRepository;
+        this.modificationApplicationInfosService = modificationApplicationInfosService;
     }
 
-    @Transactional // To have the 2 delete in the same transaction (atomic)
+    @Transactional // To have all the delete in the same transaction (atomic)
     public void deleteAll() {
+        modificationApplicationInfosService.deleteAll();
         modificationRepository.deleteAll();
         modificationGroupRepository.deleteAll();
     }
@@ -139,6 +146,8 @@ public class NetworkModificationRepository {
             // insert into origin list
             insertModifications(originModificationEntities, modificationsToMove, referenceModificationUuid);
         } else { // 2-group case
+            // before moving origin modifications between nodes, remove applications since they are not applicable anymore
+            modificationApplicationInfosService.deleteAllByModificationIds(modificationsToMove.stream().map(ModificationEntity::getId).collect(Collectors.toList()));
             // read destination group and modifications (group must be created if missing)
             ModificationGroupEntity destinationModificationGroupEntity = getOrCreateModificationGroup(destinationGroupUuid);
             List<ModificationEntity> destinationModificationEntities = destinationModificationGroupEntity.getModifications();
@@ -221,10 +230,9 @@ public class NetworkModificationRepository {
         return getModifications(groupUuid, onlyMetadata, errorOnGroupNotFound, false);
     }
 
-    @Transactional(readOnly = true)
     public List<ModificationInfos> getModifications(UUID groupUuid, boolean onlyMetadata, boolean errorOnGroupNotFound, boolean onlyStashed) {
         try {
-            return onlyMetadata ? getModificationsMetadata(groupUuid, onlyStashed) : getModificationsInfos(List.of(groupUuid), onlyStashed);
+            return onlyMetadata ? getModificationsMetadata(groupUuid, onlyStashed) : getModificationsEntities(List.of(groupUuid), onlyStashed).stream().map(this::getModificationInfos).toList();
         } catch (NetworkModificationException e) {
             if (e.getType() == MODIFICATION_GROUP_NOT_FOUND && !errorOnGroupNotFound) {
                 return List.of();
@@ -323,25 +331,24 @@ public class NetworkModificationRepository {
         return modificationEntity.toModificationInfos();
     }
 
-    public List<ModificationInfos> getModificationsInfos(List<UUID> groupUuids, boolean onlyStashed) {
-        Stream<ModificationEntity> modificationEntity = groupUuids.stream().flatMap(this::getModificationEntityStream);
+    public List<ModificationEntity> getModificationsEntities(List<UUID> groupUuids, boolean onlyStashed) {
+        Stream<ModificationEntity> entityStream = groupUuids.stream().flatMap(this::getModificationEntityStream);
         if (onlyStashed) {
-            return modificationEntity.filter(m -> m.getStashed() == onlyStashed)
-                    .map(this::getModificationInfos)
-                    .collect(Collectors.toList());
+            return entityStream.filter(m -> m.getStashed() == onlyStashed).toList();
         } else {
-            return modificationEntity.map(this::getModificationInfos)
-                .collect(Collectors.toList());
+            return entityStream.toList();
         }
     }
 
     @Transactional(readOnly = true)
     public ModificationInfos getModificationInfo(UUID modificationUuid) {
-        Optional<ModificationEntity> optionalModificationEntity = modificationRepository.findById(modificationUuid);
-        if (!optionalModificationEntity.isPresent()) {
-            throw new NetworkModificationException(MODIFICATION_NOT_FOUND, modificationUuid.toString());
-        }
-        return getModificationInfos(optionalModificationEntity.get());
+        return getModificationInfos(getModificationEntity(modificationUuid));
+    }
+
+    public ModificationEntity getModificationEntity(UUID modificationUuid) {
+        return modificationRepository
+            .findById(modificationUuid)
+            .orElseThrow(() -> new NetworkModificationException(MODIFICATION_NOT_FOUND, modificationUuid.toString()));
     }
 
     @Transactional // To have the 2 delete in the same transaction (atomic)
@@ -551,22 +558,29 @@ public class NetworkModificationRepository {
         // This optimizes the treatment for tabular modifications but reduces efficiency for a list of 'unitary'
         // modifications. Nevertheless, for the volumes we are considering (max few hundreds) it is still very
         // efficient so no need to dig deeper about that for now.
-        modificationEntities.forEach(m -> {
-            if (m instanceof TabularModificationEntity tabularModificationEntity) {
-                deleteTabularModification(tabularModificationEntity);
-            } else {
-                modificationRepository.delete(m);
-            }
-        });
+
+        // delete tabular modification
+        List<TabularModificationEntity> tabularModificationsToDelete = modificationEntities.stream().filter(TabularModificationEntity.class::isInstance).map(TabularModificationEntity.class::cast).toList();
+        tabularModificationsToDelete.forEach(this::deleteTabularModification);
+
+        // delete other modification types with "in" requests
+        List<UUID> uuidsToDelete = modificationEntities.stream().filter(Predicate.not(TabularModificationEntity.class::isInstance)).map(ModificationEntity::getId).toList();
+        modificationApplicationInfosService.deleteAllByModificationIds(uuidsToDelete);
+        modificationRepository.deleteAllByIdIn(uuidsToDelete);
     }
 
-    public void deleteTabularModification(TabularModificationEntity tabularModificationEntity) {
+    private void deleteTabularModification(TabularModificationEntity tabularModificationEntity) {
+        List<UUID> modificationToCleanUuids = new ArrayList<>();
+        modificationToCleanUuids.add(tabularModificationEntity.getId());
         switch (tabularModificationEntity.getModificationType()) {
             case GENERATOR_MODIFICATION:
                 List<UUID> subModificationsIds = modificationRepository.findSubModificationIdsByTabularModificationId(tabularModificationEntity.getId());
+                modificationToCleanUuids.addAll(subModificationsIds);
+                modificationApplicationInfosService.deleteAllByModificationIds(modificationToCleanUuids);
                 generatorModificationRepository.deleteTabularModification(subModificationsIds, tabularModificationEntity.getId());
                 break;
             default:
+                modificationApplicationInfosService.deleteAllByModificationIds(modificationToCleanUuids);
                 modificationRepository.delete(tabularModificationEntity);
                 break;
         }
